# chapkit

./: .gitignore  404.html  CLAUDE.md  Dockerfile  Makefile  README.md  ROADMAP.md  compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20251010_0927_4d869b5fb06e_initial_schema.py
api-reference/: index.html
designs/: app-system.md  library-split.md  python-tasks-and-scheduling.md
docs/: api-reference.md  authentication.md  index.md
docs/advanced/: hooks.md  index.md  job-scheduler.md  library-usage.md  logging.md
docs/api-reference/: endpoints.md  error-handling.md  index.md  operations.md  pagination.md  schemas.md
docs/api-reference/core/: database.md  exceptions.md  logging.md  manager.md  models.md  repository.md  scheduler.md  schemas.md  types.md
docs/api-reference/core-api/: crud.md  dependencies.md  middleware.md  pagination.md  router.md  service-builder.md  utilities.md
docs/api-reference/modules/: artifact.md  config.md  ml.md  task.md
docs/api-reference/service-builders/: dependencies.md  service-builder.md
docs/architecture/: api-layer.md  core-layer.md  dependency-flow.md  index.md  modules.md
docs/contributing/: code-quality.md  development.md  git-workflow.md  index.md
docs/getting-started/: first-service.md  index.md  installation.md  quickstart.md
docs/guides/: app-hosting.md  authentication.md  creating-modules.md  custom-entities.md  custom-routers.md  docker.md  health-checks.md  index.md  job-scheduler.md  migrations.md  ml-workflows.md  monitoring.md  task-execution.md  testing.md
docs/includes/: abbreviations.md
docs/ml-workflows/: class-runner.md  examples.md  functional-runner.md  index.md  shell-runner.md
docs/modules/: artifacts.md  config.md  index.md  ml.md  tasks.md
docs/service-builders/: base-service-builder.md  index.md  ml-service-builder.md  service-builder.md
docs/stylesheets/: extra.css
examples/: __init__.py  app_hosting_api.py  artifact_api.py  auth_basic.py  auth_custom_header.py  auth_docker_secrets.py  auth_envvar.py  auth_ml_service.py  authenticated_api.py  config_api.py  config_artifact_api.py  config_with_artifacts.py  core_api.py  core_cli.py  custom_operations_api.py  full_featured_api.py  job_scheduler_api.py  job_scheduler_sse_api.py  library_usage_api.py  ml_basic.py  ml_class.py  ml_pipeline.py  ml_shell.py  monitoring_api.py  python_task_execution_api.py  quickstart.py  readonly_task_api.py  task_execution_api.py
examples/docker/: .env.example  README.md  compose.auth-secrets.yml  compose.monitoring.yml  docker-compose.auth-envvar.yml  docker-compose.auth-secrets.yml
examples/docker/monitoring/prometheus/: prometheus.yml
examples/docker/secrets/: api_keys.txt.example
examples/docs/: POSTMAN.md  README.md  auth_basic.md  auth_basic.postman_collection.json  auth_docker_secrets.md  auth_envvar.md  auth_ml.md  auth_quick_reference.md  ml_basic.md  ml_basic.postman_collection.json  ml_class.md  ml_class.postman_collection.json  ml_shell.md  ml_shell.postman_collection.json  monitoring_api.postman_collection.json  quick_reference.md  task_python_execution.md  task_python_execution.postman_collection.json
examples/scripts/: predict_model.py  train_model.py
guides/app-hosting/: index.html
guides/authentication/: index.html
guides/health-checks/: index.html
guides/job-scheduler/: index.html
guides/ml-workflows/: index.html
guides/monitoring/: index.html
guides/task-execution/: index.html
search/: search_index.json
src/chapkit/: __init__.py
src/chapkit/api/: __init__.py  dependencies.py  service_builder.py
src/chapkit/api/templates/: ml_landing_page.html
src/chapkit/core/: __init__.py  database.py  manager.py  scheduler.py  types.py
src/chapkit/core/api/: __init__.py  app.py  auth.py  crud.py  dependencies.py  middleware.py  monitoring.py  pagination.py  service_builder.py  sse.py  utilities.py
src/chapkit/modules/: __init__.py
src/chapkit/modules/artifact/: manager.py  models.py  repository.py  router.py  schemas.py
tests/: _stubs.py  test_api_artifact_serialization.py  test_api_base.py  test_api_crud.py  test_api_openapi.py  test_api_routers.py  test_api_service_builder.py  test_api_utilities.py  test_app_loader.py  test_artifact.py  test_artifact_router.py  test_auth.py  test_config.py  test_config_artifact_link.py  test_core_coverage.py  test_database.py  test_dependencies.py  test_example_artifact_api.py  test_example_config_api.py  test_example_config_artifact_api.py  test_example_core_api.py  test_example_core_cli.py  test_example_custom_operations_api.py  test_example_full_featured_api.py  test_example_job_scheduler_api.py  test_example_job_scheduler_sse_api.py  test_example_library_usage_api.py  test_example_ml_basic.py  test_example_ml_class.py  test_example_ml_shell.py  test_example_monitoring_api.py  test_example_python_task_execution_api.py  test_example_task_execution_api.py  test_exceptions.py  test_health_router.py  test_job_router.py  test_manager.py  test_manager_config.py  test_manager_task.py  test_middleware.py  (+18 more)
(+28 files in other folders)
